# HamiltonFastMarching

./: .gitattributes  .gitignore  CMakeLists.txt  DispatchAndRun.h  Doxyfile  License.txt  Readme.md  Readme.txt
Base/: GeodesicDiscreteSolver.hxx  GeodesicODESolver.h  HFMInterface.h  HFMInterface.hxx  HFM_StencilDataType.hxx  HamiltonFastMarching.h  HamiltonFastMarching.hxx  PeriodicGrid.h
ExampleFiles/Mathematica/: Common.nb  Curvature2Demo.nb  InteractiveObstacles.nb
ExampleFiles/Matlab/: CompileMexHFM.m
ExampleFiles/Python/: BoatDemo.py  FileIO.py
Experimental/: CMakeLists.txt  Jorg.h  PossibleProjects.txt  Quaternionic.h  ReedsSheppAdaptive2.h  RiemannLifted.h
ExtraAlgorithms/: CommonStoppingCriteria.h  EuclideanPathLength.h  FirstVariation.h  VoronoiDiagram.h  WallObstructionTest.h
Headers/: CMakeLists.txt  DispatchAndRun.h
Headers/Base/: BaseGrid.h  CMakeLists.txt  CommonStencil.h  EulerianStencil.h  EulerianStencil.hxx  GeodesicDiscreteSolver.h  GeodesicDiscreteSolver.hxx  GeodesicODESolver.h  GeodesicODESolver.hxx  HFMInterface.h  HFMInterface.hxx  HFM_ParamDefault.hxx  HFM_StencilDataType.hxx  HamiltonFastMarching.h  HamiltonFastMarching.hxx  Lagrangian2Stencil.h  Lagrangian2Stencil.hxx  Lagrangian3Stencil.h  PeriodicGrid.h  PeriodicGrid.hxx  StencilType.h
Headers/Base/Implementation/: CMakeLists.txt  EulerianStencil.hxx  GeodesicDiscreteSolver.hxx  GeodesicODESolver.hxx  HFMInterface.hxx  HFM_ParamDefault.hxx  HFM_StencilDataType.hxx  HFM_StencilLag2.hxx  HFM_StencilLag3.hxx  HFM_StencilRecompute.hxx  HFM_StencilShare.hxx  HamiltonFastMarching.hxx  PeriodicGrid.hxx
Headers/Experimental/: AlignedBillard.h  AlignedBillard.hxx  AsymRander.h  AsymmetricQuadratic.h  CMakeLists.txt  Differentiable.h  HalfDisk.h  IsotropicBox.h  PrescribedCurvature2.h  Quaternionic.h  ReedsSheppAdaptive2.h  RiemannLifted.h  Riemannian45.h  RollingBall.h  Seismic2.h  Seismic3.h  TTI.h
Headers/Experimental/Implementation/: AlignedBillard.hxx  CMakeLists.txt  Seismic2.hpp  Seismic3.hpp  TTI.hpp
Headers/ExtraAlgorithms/: CMakeLists.txt  CommonStoppingCriteria.h  DynamicFactoring.h  DynamicFactoring.hxx  EuclideanPathLength.h  FirstVariation.h  StaticFactoring.h  TimeDependentFields.h  VoronoiDiagram.h  WallObstructionTest.h
Headers/ExtraAlgorithms/Implementation/: CMakeLists.txt  DynamicFactoring.hxx  StaticFactoring.hxx
Headers/Specializations/: CMakeLists.txt  CommonTraits.h  Curvature2.h  Curvature3.h  Isotropic.h  QuadLinLag2.h  QuadLinLag2.hxx  Riemannian.h
Headers/Specializations/Implementation/: CMakeLists.txt  QuadLinLag2.hxx
Interfaces/: CompilationNotes.txt  common.cmake
Interfaces/FileHFM/: CMakeLists.txt  FileHFM.cpp  ide_headers_layout.cmake
Interfaces/FileHFM/Python/: Curvature2Demo.py
Interfaces/FileVDQ/: CMakeLists.txt  FileVDQ.cpp  Readme.md
Interfaces/FileVDQ/Examples/: Readme.txt
Interfaces/FileVDQ/Headers/: CMakeLists.txt  DispatchAndRun.h
Interfaces/MathematicaHFM/: CMakeLists.txt  MathematicaHFM.cpp  Readme.txt
Interfaces/MathematicaHFM/CMake/Mathematica/: FindMathematica.cmake  FindMathematicaDocumentationBuild.cmake.in  FindMathematicaTestDriver.sh
Interfaces/MathematicaHFM/ExampleFiles/FileBased/: Common.nb  Curvature2Demo.nb  InteractiveObstacles.nb  InteractiveTubularSegmentation.nb  Riemannian.nb  StateDemo.nb  TimeVarDemo.nb
Interfaces/MathematicaHFM/ExampleFiles/LibraryLinkBased/: Common.nb  IsotropicTest.nb
Interfaces/MatlabHFM/: CMakeLists.txt  MatlabHFM.cpp  NotA_CMakeLists.txt  Readme.txt
Interfaces/MatlabHFM/DummyBuildTest/: CMakeLists.txt
Interfaces/MatlabHFM/ExampleFiles/: AsymRanderDemo.m  AsymmetricQuadratic2Demo.m  AsymmetricQuadratic3p1Demo.m  CompileMexHFM.m  Curvature2Demo.m  HalfDisk2Demo.m  HalfDisk3p1Demo.m  PrescribedCurvature2Demo.m  RescaledCoords.m  RiemannDemo.m  RiemannLiftedDemo.m  StateDemo.m
Interfaces/PyBind11HFM/: CMakeLists.txt
Interfaces/PyBind11HFM/src/: main.cpp
Interfaces/PythonHFM/: CMakeLists.txt  PythonHFM.cpp  Readme.md  Readme.txt  setup.py
Interfaces/PythonHFM/ExampleFiles/FileBased/: BoatDemo.py  Curvature2Demo.py  FileIO.py  TimeVarDemo.py
Interfaces/PythonHFM/ExampleFiles/LibraryBased/: IsotropicTest.py  Untitled.ipynb
Interfaces/PythonHFM/HFMpy/: HFMUtils.py
Interfaces/PythonHFM/attempt_conda.recipe/: meta.yaml
Interfaces/PythonHFM/conda.recipe/: BuildAndUpload.py  bld.bat  build.sh  meta.yaml  setup.py
Interfaces/PythonHFM/src/: main.cpp
JMM_CPPLibs/: CMakeLists.txt  Readme.txt
JMM_CPPLibs/FileIO/: CMakeLists.txt  FileIO.nb  PythonIO.py
JMM_CPPLibs/JMM_CPPLibs/: JMM_CPPLibs_config.hpp
JMM_CPPLibs/JMM_CPPLibs/DataStructures/: CappedVector.h  FromComponentsIterator.h  GetComponent.h  MapWeightedSum.h  MultiVector.h  RangeAccessor.h  ShallowMap.h  VirtualConstIterator.h
JMM_CPPLibs/JMM_CPPLibs/LinearAlgebra/: AD2.h  AffineTransformType.h  AnisotropicGeometry.h  ArrayType.h  AsymRanderNorm.h  AsymmetricQuadraticNorm.h  BasisReduction.h  ComposedNorm.h  DiagonalNorm.h  DifferentiationType.h  FriendOperators.h  HopfLaxMinimize.h  MatrixType.h  PointBaseType.h  PointType.h  Pol1.h  RanderNorm.h  ScalarTraits.h  SeismicNorm.h  SquareCube.h  SymmetricMatrixPair.h  SymmetricMatrixType.h  TTINorm.h  UtilsAD.h  VectorPairType.h  VectorType.h  VoronoiReduction.h
JMM_CPPLibs/JMM_CPPLibs/LinearAlgebra/Implementation/: AD2.hpp  BasisReduction.hpp  MatrixType.hxx  PointBaseType.hxx  SeismicNorm.hpp  SeismicNorm_HopfLax.hpp  SeismicNorm_HopfLax_Cache.hpp  SeismicNorm_MetilConstraint.hpp  SymmetricMatrixType.hxx  TTINorm.hxx  VectorType.hxx  VoronoiReduction_Basis.hxx  VoronoiReduction_KKT.hxx  VoronoiReduction_Minimize.hxx  (+1 more)
JMM_CPPLibs/JMM_CPPLibs/Macros/: DependentFalse.h  Exception.h  Expand.h  ExportArrow.h  PPCat.h  RedeclareTypes.h  String.h  TemplateLog2.h
JMM_CPPLibs/JMM_CPPLibs/Output/: BaseIO.h  BaseIO.hxx  EnumToString.h  FileIO.h  FileIO.hxx  IO.h  IO.hxx  MathematicaIO.h  MathematicaIO.hxx  MathematicaIOExternC.h  MexIO.h  MexIO.hxx  PythonIO.h  PythonIO.hxx
Specializations/: Curvature3.h  Isotropic.h  Riemannian.h
(+9 files in other folders)
